tests/scan/fixtures/validation/negative/clean_go_module/cleanlib.go
// Package cleanlib is a minimal Go module used as a clean baseline.
package cleanlib

// Hello returns a greeting.
func Hello(name string) string {
	return "hello, " + name
}
